finish update/readAll pet